Fix swagger tags.
