# handler/taskhandler.go
@@ -49,7 +49,7 @@ func (taskHandler *TaskHandler) addNewTask(uuid string) (*task.Task, error) {
 }
 
 //Send a file to analysis that is specified via the ID
-// swagger:route POST /task/{uuid} addtask addTask
+// swagger:route POST /task/{uuid} file-processor task
 // Add a task to be processed
 // responses:
 //	200: taskInfoResponse
@@ -77,7 +77,7 @@ func (taskHandler *TaskHandler) AddTask(rw http.ResponseWriter, req *http.Reques
 }
 
 //Get information about an analysis (execution status and results)
-// swagger:route GET /task/{uuid} task getTaskInfo
+// swagger:route GET /task/{uuid} file-processor task
 // Returns task info
 // responses:
 //  200: taskInfoResponse
@@ -101,7 +101,7 @@ func (taskHandler *TaskHandler) GetTaskInfo(rw http.ResponseWriter, req *http.Re
 }
 
 //Search for the files that contain a particular UUID
-// swagger:route GET /files/{uuid} files searchFiles
+// swagger:route GET /files/{uuid} file-processor  searchFiles
 // Returns a list of files with UUID
 // responses:
 //  200: searchFilesResponse
@@ -110,7 +110,7 @@ func (taskHandler *TaskHandler) SearchFiles(rw http.ResponseWriter, req *http.Re
 }
 
 // Given a file UUID, check if there’s a chain of referenced files that starts with that file and contains a loop
-// swagger:route GET /isloop/{uuid} files searchFiles
+// swagger:route GET /isloop/{uuid} file-processor isLoop
 // Returns true or false
 // responses:
 //  200: isLoopResponse
